upd news docs upd functionality